@@ -4,78 +4,79 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/main_background">
-<TableRow
-
-	android:layout_weight="1"
-	android:layout_gravity="center">
-	<!-- 	android:paddingTop="64dp" -->
-	<ImageButton
+	
+	<TableRow
 		android:layout_weight="1"
-	
-		android:id="@+id/schedule_button"
-		android:layout_height="wrap_content"
-	    android:layout_width="wrap_content"
-		android:src="@drawable/schedule_image_button"
-		android:background="#00000000"
-		android:layout_gravity="center"/>
-	<ImageButton
-	android:layout_weight="1"
-	
-		android:id="@+id/balance_button"
-		android:layout_height="wrap_content"
-	    android:layout_width="wrap_content"
-		android:background="#00000000"
-		android:src="@drawable/balance_image_button"
-		android:layout_gravity="center"/>
-	
-</TableRow>
-<TableRow
-    
-    android:layout_weight="1"
-	android:layout_gravity="center"
-		android:layout_width="fill_parent" android:baselineAligned="true"> <!-- android:paddingTop="47dp"  android:layout_marginBottom="27px"   -->
-    <ImageButton android:src="@drawable/map_image_button" 
-    android:layout_weight="1"
-    android:id="@+id/map_button" 
-    android:layout_height="wrap_content" 
-    android:layout_gravity="center" 
-    android:layout_width="wrap_content" 
-    android:background="#00000000"></ImageButton>
-    
-    <ImageButton android:src="@drawable/data_image_button" 
-    android:layout_weight="1"
-    android:id="@+id/data_button" 
-    android:layout_height="wrap_content" 
-    android:layout_gravity="center" 
-    android:layout_width="wrap_content" 
-    android:background="#00000000"></ImageButton>
+		android:layout_gravity="center">
+		<!-- 	android:paddingTop="64dp" -->
 		
-</TableRow> 
-
-  	<TableRow
- 	    android:layout_marginBottom="27px"
- 	    android:layout_gravity="center"
- 	    android:gravity="center"
- 	    android:layout_weight="1"
-	android:layout_width="wrap_content" android:baselineAligned="true"> <!-- android:paddingTop="47dp"-->
-	<ImageButton 
-	android:src="@drawable/menu_image_button" 
- 
-    android:id="@+id/menu_button" 
-    android:layout_height="wrap_content" 
-    android:layout_gravity="center" 
-    android:layout_width="wrap_content" 
-    android:background="#00000000"></ImageButton>
-	 <!--   android:layout_weight="1" -->
+		<ImageButton
+			android:layout_weight="1"
+			android:id="@+id/schedule_button"
+			android:layout_height="wrap_content"
+		    android:layout_width="wrap_content"
+			android:src="@drawable/schedule_image_button"
+			android:background="#00000000"
+			android:layout_gravity="center"/>
+		<ImageButton
+			android:layout_weight="1"
+			android:id="@+id/balance_button"
+			android:layout_height="wrap_content"
+		    android:layout_width="wrap_content"
+			android:background="#00000000"
+			android:src="@drawable/balance_image_button"
+			android:layout_gravity="center"/>	
+	</TableRow>
+	<TableRow
+	    android:layout_weight="1"
+		android:layout_gravity="center"
+		android:layout_width="fill_parent" 
+		android:baselineAligned="true"> <!-- android:paddingTop="47dp"  android:layout_marginBottom="27px"   -->
+	    
+	    <ImageButton 
+		    android:src="@drawable/map_image_button" 
+		    android:layout_weight="1"
+		    android:id="@+id/map_button" 
+		    android:layout_height="wrap_content" 
+		    android:layout_gravity="center" 
+		    android:layout_width="wrap_content" 
+		    android:background="#00000000"/>
+	    
+	    <ImageButton 
+	        android:src="@drawable/data_image_button" 
+		    android:layout_weight="1"
+		    android:id="@+id/data_button" 
+		    android:layout_height="wrap_content" 
+		    android:layout_gravity="center" 
+		    android:layout_width="wrap_content" 
+		    android:background="#00000000"/>
+			
+	</TableRow> 
 	
-<!-- 	<ImageButton android:src="@drawable/data_image_button" 
-    android:layout_weight="1"
-    android:id="@+id/exams_button" 
-    android:layout_height="wrap_content" 
-    android:layout_gravity="center" 
-    android:layout_width="wrap_content" 
-    android:background="#00000000"></ImageButton> -->
-	
-	
+	<TableRow
+	    android:layout_marginBottom="27px"
+	    android:layout_gravity="center"
+	    android:gravity="center"
+	    android:layout_weight="1"
+		android:layout_width="wrap_content" 
+		android:baselineAligned="true"> <!-- android:paddingTop="47dp"-->
+		
+		<ImageButton 
+			android:src="@drawable/menu_image_button" 
+		    android:id="@+id/menu_button" 
+		    android:layout_height="wrap_content" 
+		    android:layout_gravity="center" 
+		    android:layout_width="wrap_content" 
+		    android:background="#00000000"
+		    android:layout_weight="1"/>
+		
+	<!--  	<ImageButton 
+	 	    android:src="@drawable/data_image_button" 
+		    android:id="@+id/blackboard_button" 
+		    android:layout_height="wrap_content" 
+		    android:layout_gravity="center" 
+		    android:layout_width="wrap_content" 
+		    android:background="#00000000"
+		    android:layout_weight="1"/> -->
 	</TableRow> 
 </TableLayout>
