@@ -25,3 +25,7 @@ Changed preferences to make the functions of some of them more clear.
 Button added to map to return to user's current location.
 Preference added to choose where to center map upon initial load.
 Times of operation added to dining menus.
+
+Versioncode 3
+
+Fixed bug with Login button state when no internet connectivity is present
